testsuite/tests/properties/invalid_new/positional/test.lkt
from common import FooNode, MyStruct

class BarNode: FooNode {
    fun prop(): MyStruct = MyStruct(12, 15)
}
